# studySB-CPP

./: .gitignore
1-first_programms/: hw 1-7-1.cpp  hw 1-7-2.cpp  hw 1-7-3.cpp  task 1.3 line.cpp
10-IDE_Git/hw 10.9/: hw 10.9 (the equation).cpp
10-IDE_Git/lesson 10 - 4 Finding errors/: 1.cpp  10-4 Finding errors 1.cpp  2.cpp
11-funcrion/: 11 - 2 not me.cpp  11-2 correct mail.cpp  hw - 11-1 Caesar's cipher.cpp  hw - 11.2-2 correct mail.cpp  hw 11.3 - ip validation.cpp
12-massiv/: hw 12 - 4 series of number.cpp  hw 12-1 apartment building.cpp  hw 12-2 sorting.cpp  hw 12-3 assert.cpp
13-vector/: 13.1 - 1 avg.cpp  13.1 - 2 reverse.cpp  13.1 - 3 second number.cpp  13.2 - 1 robots.cpp  13.2 - 2 hospital.cpp  13.2 - 3 robots and  corruption.cpp  13.3 - 1 robots.cpp  13.3 - 2 robots 2.cpp  13.3 .cpp  hw 13 - 1 delet number.cpp  hw 13 - 2 sum cost.cpp  hw 13 - 3 cycle.cpp  hw 13 - 4.cpp
14-two_dimensional_array/: 14.8 .cpp  hw 14.1 - banquet table.cpp  hw 14.2 - Tic-tac-toe.cpp  hw 14.3 - matrix.cpp  hw 14.4 - matrix multiplication.cpp  hw 14.5 - pop.cpp  hw 14.6 - snake.cpp  hw 14.7 - minecraft.cpp  hw 14.8 - sea battle.cpp
15-massiv_algorithm/: task 1 - max sum.cpp  task 2 - pair number.cpp  task 3 - find index.cpp  task 4 - sort.cpp
16-data_types/: hw 1 - speedometer.cpp  hw 2 - double number.cpp  hw 3 - calculator.cpp  hw 4 - machanical piano.cpp  hw 5 - smart house.cpp  lesson 3 byte.cpp  ls 3 - 2.cpp  ls 4.cpp
17-pointers/: task 1 - swap.cpp  task 2 - revers.cpp  task 3 - line search.cpp
18-reference/: task 1 - swap.cpp  task 2 - rabbit.cpp  task 3 - even numbers.cpp
2-integer_numbers/: 2-5-1-race.cpp  2-5-2-deliver.cpp  2-5-3-kfc.cpp  2-5-4-rent.cpp
3-string/: 3.2.1 - sqr.cpp  3.2.2 - deliver.cpp  3.3.1 - character.cpp  3.3.2 - user.cpp  3.4-sale.cpp  3.5.1-bus.cpp  3.5.3-bamboo.cpp  3.5.4-swap2.cpp
30-http_request/task-1-http/: CMakeLists.txt  main.cpp
30-http_request/task-2-header/: CMakeLists.txt  main.cpp
36-Qt-rgb_circle/: CMakeLists.txt  main.cpp  resources.qrc
37-QtDesigner_QML/task-3-controller/: CMakeLists.txt  controller.ui  controllermainwindow.h  main.cpp
38-moreQt/task-2-htmlbrowser/38_2_html/: CMakeLists.txt  main.cpp
4-condition_if/: 4-1-min.cpp  4-2-sum.cpp  4-3-parity.cpp  4-4-lvlplayer.cpp  4-5-division.cpp  4-6-barber2.cpp  4-7-restoran.cpp  4-8-pay.cpp  4-9-tax.cpp  4.2.1-sale.cpp  4.2.2-travel.cpp  4.2.3-absolute.cpp  4.2.4-barber.cpp
5-hard_condition/: 5-1-flyghtLvl.cpp  5-2-may1.cpp  5-3-may2.cpp  5-4-ATM2.cpp  5-5-BrickMatroshka.cpp  5-6-sadBirthday.cpp  5.2.1-axis.cpp  5.2.2-atm.cpp  5.2.3-366year.cpp  5.3.2-bridge.cpp  5.3.3-triangle.cpp  5.3.4-coincidence.cpp  5.4.1-army.cpp  5.4.2-brick.cpp  5.4.3-nuggets.cpp
6-while/: 6-1-cuckoo.cpp  6-2-bigcount.cpp  6-3-collector.cpp  6-4-luckyticket.cpp  6-5-fibbonacci.cpp  6-6-deposit.cpp  6-7-fraction.cpp  6-8-guessthenumber.cpp  6.2.1-chief.cpp  6.2.2-buyElephant.cpp  6.2.3-degree.cpp  6.2.4-reminder.cpp  6.2.5-password.cpp  6.2.6-sum.cpp  6.3.1-password2.cpp  6.3.3-robots.cpp  6.3.4-wartime.cpp
7-loop_FOR/: 7-1-provision.cpp  7-2-coffeeMachine.cpp  7-3-redMars.cpp  7-4-frame.cpp  7-5-Axis.cpp  7-6-announce.cpp  7-7-biolab.cpp  7-8-triangle.cpp  7.2.1-cuckoo.cpp  7.2.2-numbersum.cpp  7.2.3-multiplicationTable.cpp  7.2.4-sumOdd.cpp  7.2.5-robotBoss.cpp  7.3.1-passwordFOR.cpp  7.3.2-cadastralTroubleFOR.cpp  7.3.3-DieHard.cpp
8-float/: 8-1-spaceSimulator.cpp  8-2-immolate.cpp  8-3-toyStory.cpp  8-4-steam.cpp  8-5-runner.cpp  8-6-pendulum.cpp  8.2.1-nuts.cpp  8.2.2-healthyLifestile.cpp  8.2.3-regularCustomer.cpp  8.3.1-Cu.cpp  8.3.2-computerVision.cpp  8.3.3-meteostation.cpp  8.3.4-computerVision.cpp  8.4.1-knightMove.cpp  8.4.2-autopilot.cpp  8.4.3-elevator.cpp  8.4.4-photoshop.cpp
9-text/: 9.3.1.cpp  9.3.2.cpp
(+202 files in other folders)
